# lib/db/src/schema/index.ts
@@ -3,3 +3,5 @@ export * from "./resources";
 export * from "./mood";
 export * from "./hotlines";
 export * from "./faq";
+export * from "./conversations";
+export * from "./messages";
